tests/semantic/valid/14_const_with_ops.tc
const int X = (1 + 2) * 3 - 4 / 2 + 5;
int main(void) {
    return X;
}
