tests/semantic/invalid/05_const_init_undefined.tc
// ERR_CONST_INIT_UNDEFINED: global const init references undeclared variable
const int A = B;
int main(void) {
    return 0;
}
